<resources>
    <string name="app_name">FlashCardsParse</string>
    <string name="action_settings">Settings</string>

    <string name="parse_app_id">l267bi83DE38uur76wC7rqZwRDFUQDhKVgJXu7P7</string>
    <string name="parse_client_id">hnvfX09IXjyA3i6QOTFJHhjkxxwaUbyAZzVeYREA</string>
    <string name="Enter_your_name">Enter your name</string>
    <string name="Enter_your_username">Enter your username</string>
    <string name="Enter_your_password">Enter your password</string>
    <string name="Enter_your_email">Enter your email</string>
    <string name="Sign_In">Sign in</string>
    <string name="School">School</string>
    <string name="Enter_your_Username_and_Password">Enter your username and password:</string>
    <string name="Cancel">Cancel</string>
    <string name="Done">Done</string>
    <string name="some_text">Display and Filter your cards</string>
    <string name="Add">Add</string>
    <string name="Correct">Correct</string>
    <string name="Incorrect">Incorrect</string>
    <string name="Matching_Game">Matching Game</string>
    <string name="Start_Studying">Start Studying</string>
    <string name="Create_Flashcards">Create Flashcards</string>
    <string name="Term">Term</string>
    <string name="Definition">Definition</string>
    <string name="Search_Public_Flashcards">Search Public Flashcards</string>
    <string name="Register">Register</string>


    <string-array name="school_array">
        <item> Appalachian State University</item>
        <item> East Carolina University</item>
        <item> Elizabeth City State University</item>
        <item> Fayetteville State University</item>
        <item> North Carolina Agricultural and Technical State University</item>
        <item> North Carolina Central University</item>
        <item> North Carolina State University</item>
        <item> University of North Carolina at Asheville</item>
        <item> University of North Carolina at Chapel Hill</item>
        <item> University of North Carolina at Charlotte</item>
        <item> University of North Carolina at Greensboro</item>
        <item> University of North Carolina at Pembroke</item>
        <item> University of North Carolina at Wilmington</item>
        <item> University of North Carolina School of the Arts</item>
        <item> Western Carolina University</item>
        <item> Winston-Salem State University</item>
        <item> No School</item>
    </string-array>
    <string name="title_activity_image_display">imageDisplayActivity</string>
</resources>
