<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:text="@string/Create_Flashcards"
        android:id="@+id/createFlashcardsBtn"
        android:layout_marginTop="59dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="createFlashCards"
        android:nestedScrollingEnabled="false" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/Start_Studying"
        android:id="@+id/startStudyingBtn"
        android:layout_above="@+id/searchPublicFlashcardsBtn"
        android:layout_alignLeft="@+id/searchPublicFlashcardsBtn"
        android:layout_alignStart="@+id/searchPublicFlashcardsBtn"
        android:layout_alignRight="@+id/searchPublicFlashcardsBtn"
        android:layout_alignEnd="@+id/searchPublicFlashcardsBtn"
        android:onClick="ViewFlashCards" />

    <Button
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/Search_Public_Flashcards"
        android:onClick="searchPublicFC"
        android:id="@+id/searchPublicFlashcardsBtn"
        android:layout_above="@+id/matchingGameBtn"
        android:layout_alignLeft="@+id/matchingGameBtn"
        android:layout_alignStart="@+id/matchingGameBtn"
        android:layout_alignRight="@+id/createFlashcardsBtn"
        android:layout_alignEnd="@+id/createFlashcardsBtn" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/Matching_Game"
        android:id="@+id/matchingGameBtn"
        android:layout_marginBottom="82dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/createFlashcardsBtn"
        android:layout_alignStart="@+id/createFlashcardsBtn"
        android:layout_alignRight="@+id/createFlashcardsBtn"
        android:layout_alignEnd="@+id/createFlashcardsBtn" />

</RelativeLayout>