<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#aab4b9"
    android:onClick="newAddToDB">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="@string/Term"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/Definition"
        android:layout_weight="0.42"
        android:layout_gravity="center_vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="225dp"
        android:id="@+id/imageView"

        android:onClick="ADD PICTURE"
        android:layout_weight="0.56"
        android:src="#ffffff"
        android:baselineAlignBottom="false"
        android:clickable="false"
        android:textAlignment="center"
        android:layout_marginLeft="100dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="Start Camera"
        android:src="@drawable/camera"
        android:onClick="selectImage"
        android:id="@+id/startCamera"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/icon_mas"
        android:onClick="newAddToDB"
        android:layout_below="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/Done"
        android:onClick="doneBtn"
        android:id="@+id/doneBtn"
        android:layout_gravity="right"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/save_btn" />

</RelativeLayout>